[package]
name = "game-engine"
version = "0.1.0"
authors = ["Dexter André Osiander <dexter.andre@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
gl = "0.14.0"
glfw = "0.34.0"

# [dependencies.glfw]
# git = "https://github.com/bjz/glfw-rs.git"